Update QuarkusTestResource to WithTestResource annotations
Replaced deprecated `@QuarkusTestResource` annotations with the new `@WithTestResource` annotations across multiple test classes. This ensures compatibility with the latest Quarkus testing utilities and simplifies resource management.

Signed-off-by: Eric Deandrea <edeandrea@redhat.com>